Improved mobile UI for chat page, group chat page, friends page, groups page. Implemented the posibility to send a friend request and accept/decline a friend request. Bug fix needed after friend request is accepted then notify the other client if it is online that the friend request has been accepted and better update of the ui.

--- a/Client/WillowClient/WillowClient/WillowClient.csproj
+++ b/Client/WillowClient/WillowClient/WillowClient.csproj
@@ -104,7 +104,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\AddFriendPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\AndroidCallPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\CreateGroupPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\FriendRequestPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\WindowsCallPage.xaml">
