--- a/Client/WillowClient/WillowClient/WillowClient.csproj
+++ b/Client/WillowClient/WillowClient/WillowClient.csproj
@@ -146,6 +146,9 @@
 	  <MauiXaml Update="Views\ReportABugPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\UserProfilePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\WindowsCallPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
