Added custom about messages on user profiles, users can change their about message from their profile page. Started working on find friends page where the recommendations for users that can be added as friends is. From the list of recommendations users should select the ones they wish to send a friend request to and click the send button.

--- a/Client/WillowClient/WillowClient/WillowClient.csproj
+++ b/Client/WillowClient/WillowClient/WillowClient.csproj
@@ -34,7 +34,7 @@
 		<!-- App Icon -->
 		<!--<MauiImage Include="Resources\AppIcon\appiconfg.svg" />-->
 		<!--<MauiIcon Include="Resources\AppIcon\willow.png" Color="WhiteSmoke" Aspect="AspectFill" />-->
-		<MauiIcon Include="Resources\AppIcon\willow.svg" BaseSize="128,128"/>
+		<MauiIcon Include="Resources\AppIcon\willow.svg" BaseSize="128,128" />
 
 		<!-- Splash Screen -->
 		<!--<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#303030" BaseSize="128,128" />-->
@@ -140,6 +140,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\EditProfilePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\EditStatusPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\FriendRequestPage.xaml">
